--- a/msvc/lib-bitcoin/lib-bitcoin.vcxproj.filters
+++ b/msvc/lib-bitcoin/lib-bitcoin.vcxproj.filters
@@ -220,5 +220,8 @@
     <ClInclude Include="..\..\src\coincontrol.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\hashblock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
