--- a/msvc/lib-bitcoin/lib-bitcoin.vcxproj
+++ b/msvc/lib-bitcoin/lib-bitcoin.vcxproj
@@ -50,6 +50,18 @@
     <ClCompile Include="..\..\src\version.cpp" />
     <ClCompile Include="..\..\src\wallet.cpp" />
     <ClCompile Include="..\..\src\walletdb.cpp" />
+    <ClCompile Include="..\..\src\x11\aes_helper.c" />
+    <ClCompile Include="..\..\src\x11\blake.c" />
+    <ClCompile Include="..\..\src\x11\bmw.c" />
+    <ClCompile Include="..\..\src\x11\cubehash.c" />
+    <ClCompile Include="..\..\src\x11\echo.c" />
+    <ClCompile Include="..\..\src\x11\groestl.c" />
+    <ClCompile Include="..\..\src\x11\jh.c" />
+    <ClCompile Include="..\..\src\x11\keccak.c" />
+    <ClCompile Include="..\..\src\x11\luffa.c" />
+    <ClCompile Include="..\..\src\x11\shavite.c" />
+    <ClCompile Include="..\..\src\x11\simd.c" />
+    <ClCompile Include="..\..\src\x11\skein.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\addrman.h" />
@@ -91,6 +103,18 @@
     <ClInclude Include="..\..\src\version.h" />
     <ClInclude Include="..\..\src\wallet.h" />
     <ClInclude Include="..\..\src\walletdb.h" />
+    <ClInclude Include="..\..\src\x11\sph_blake.h" />
+    <ClInclude Include="..\..\src\x11\sph_bmw.h" />
+    <ClInclude Include="..\..\src\x11\sph_cubehash.h" />
+    <ClInclude Include="..\..\src\x11\sph_echo.h" />
+    <ClInclude Include="..\..\src\x11\sph_groestl.h" />
+    <ClInclude Include="..\..\src\x11\sph_jh.h" />
+    <ClInclude Include="..\..\src\x11\sph_keccak.h" />
+    <ClInclude Include="..\..\src\x11\sph_luffa.h" />
+    <ClInclude Include="..\..\src\x11\sph_shavite.h" />
+    <ClInclude Include="..\..\src\x11\sph_simd.h" />
+    <ClInclude Include="..\..\src\x11\sph_skein.h" />
+    <ClInclude Include="..\..\src\x11\sph_types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3703B138-B8DA-460E-9DD1-41BDC7588E80}</ProjectGuid>
